Added Python ctype wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,6 @@ option(MADS_ENABLE_PERF_ASSESS "Enable performance assessment tool" OFF)
 option(MADS_ENABLE_MONGODB_AWS 
        "Enable Cloud MongoDB (requires crypto library on linux)" OFF)
 option(MADS_ENABLE_TOOLS "Compile tools (requires OpenCV)" OFF)
-option(MADS_ENABLE_PYTHON_WRAPPER "Compile Python3 wrapper to Agent class" OFF)
 option(MADS_ENABLE_GUI "Compile GUI (requires QT6)" OFF)
 option(MADS_SKIP_EXTERNALS 
        "Skip external targets (assume already compiled)" OFF)
@@ -391,10 +390,6 @@ if(${MADS_ENABLE_TOOLS})
   add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/tools)
 endif()
 
-if(${MADS_ENABLE_PYTHON_WRAPPER})
-  add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src/wrap)
-endif()
-
 if(${MADS_ENABLE_GUI})
   add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/GUI/MADSMetadata)
 endif()
@@ -464,6 +459,8 @@ install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/share/templates
   DESTINATION share
   COMPONENT MADS
 )
+file(GLOB PYTHON_SCRIPTS ${CMAKE_CURRENT_LIST_DIR}/scripts/*.py)
+install(PROGRAMS ${PYTHON_SCRIPTS} DESTINATION python)
 if(NOT WIN32)
   set(SCRIPTS_FILES 
     ${CMAKE_CURRENT_LIST_DIR}/scripts/mads-logging
