--- a/share/templates/CMakeLists.txt
+++ b/share/templates/CMakeLists.txt
@@ -52,7 +52,7 @@ FetchContent_MakeAvailable(pugg json)
 
 FetchContent_Populate(plugin 
   GIT_REPOSITORY https://github.com/pbosetti/mads_plugin.git
-  GIT_TAG        v1.3.5
+  GIT_TAG        v2.0-P6
   GIT_SHALLOW    TRUE
   SUBBUILD_DIR ${CMAKE_CURRENT_BINARY_DIR}/_deps/plugin-subbuild
   SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/_deps/plugin-src
